# cookiecutter-fastapi-react

./: .dockerignore  .env.example  README.md  cookiecutter.json  docker-compose.yml
backend/: .env.example  Dockerfile
backend/app/: main.py
backend/app/api/: router.py
frontend/: .eslintrc.js  package.json
frontend/src/services/: api.js
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: Dockerfile  pyproject.toml
{{cookiecutter.project_slug}}/backend/app/: config.py
{{cookiecutter.project_slug}}/frontend/: Dockerfile  package.json
