[tool.poetry]
name = "{{ cookiecutter.project_slug }}-backend"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }} - Backend"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
numpy = "^1.25.2"
email-validator = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150

[tool.isort]
profile = "black"
